--- a/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
@@ -1,4 +1,16 @@
+#генерални
+anonymous=Анонимен
+footer_message=Иван Русенов 2024
+title_message=ОРХИДЕЯ
+
+#навигация
+nav_bar_company=Орхидея
+nav_bar_add_bouquet=Добави букет
+nav_bar_gallery=Галерия
+nav_bar_welcome=Добре дошъл(ла), 
 nav_bar_language=Език
 nav_bar_login=Вход
 nav_bar_register=Регистрация
+nav_bar_my_orders=Моите поръчки
 nav_bar_logout=Изход
+
