--- a/Flowers-Shop/src/main/resources/i18n/messages.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages.properties
@@ -1,4 +1,15 @@
+#general
+anonymous=Anonymous
+footer_message=Ivan Rusenov 2024
+title_message=ORCHID
+
+#navbar
+nav_bar_company=Orchid
+nav_bar_add_bouquet=Add bouquet
+nav_bar_gallery=Gallery
+nav_bar_welcome=Welcome, 
 nav_bar_language=Language
 nav_bar_login=Login
 nav_bar_register=Register
+nav_bar_my_orders=My orders
 nav_bar_logout=Logout
