implement change order status

--- a/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
@@ -14,3 +14,5 @@ nav_bar_register=Регистрация
 nav_bar_my_orders=Моите поръчки
 nav_bar_logout=Изход
 
+#index
+index_heading=Онлайн бутик за цветя и букети
