--- a/Flowers-Shop/src/main/resources/i18n/messages.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages.properties
@@ -13,3 +13,6 @@ nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_my_orders=My orders
 nav_bar_logout=Logout
+
+#index
+index_heading=Online boutique for flowers and bouquets
