implement user edit

--- a/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
@@ -7,7 +7,7 @@ title_message=ОРХИДЕЯ
 nav_bar_company=Орхидея
 nav_bar_add_bouquet=Добави букет
 nav_bar_gallery=Галерия
-nav_bar_welcome=Добре дошъл(ла), 
+nav_bar_welcome=Добре дошъл(а), 
 nav_bar_language=Език
 nav_bar_login=Вход
 nav_bar_register=Регистрация
