--- a/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
@@ -2,6 +2,23 @@
 anonymous=Анонимен
 footer_message=Иван Русенов 2024
 title_message=ОРХИДЕЯ
+add=Добави
+description=Описание
+item_number=Артикул №
+price=Цена:
+username=Потребителско име
+id=Ид
+email=Имейл
+shippingAddress=Адрес за доставка:
+role=Роля
+actions=Действия
+edit=Редакция
+delete=Изтриване
+quantity=Количество
+price_per_unit=Цена за брой
+cart=Количка
+password=Парола
+confirm_password=Потвърди паролата
 
 #навигация
 nav_bar_company=Орхидея
@@ -13,6 +30,43 @@ nav_bar_login=Вход
 nav_bar_register=Регистрация
 nav_bar_my_orders=Моите поръчки
 nav_bar_logout=Изход
+nav_bar_users=Потребители
+nav_bar_orders=Поръчки
 
 #index
 index_heading=Онлайн бутик за цветя и букети
+
+#bouquet-add
+title_add_bouquet=Добави букет
+add_bouquet_choose_picture=Избери снимка
+
+#home
+home_btn_remove=Премахни
+add_to_cart=Добави в количката
+
+#users
+users_all_users=Всички потребители:
+
+#orders
+all_orders=Всички поръчки:
+order_id=Поръчка ид:
+order_details=Подробности за поръчката
+order_date_and_time=Дата и час на поръчката:
+status=Статус:
+total=Общо:
+
+#my-orders
+my_orders=Моите поръчки:
+
+#shipping-orders
+shipping_orders=Поръчки за изпращане:
+shipping_order=Изпрати поръчката
+
+#pending
+all_pending_orders=Всички изчакващи поръчки
+
+#cart
+empty_cart=Количката е празна!
+to_gallery=Към галерия
+buy=КУПИ
+
