--- a/Flowers-Shop/src/main/resources/i18n/messages.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages.properties
@@ -2,6 +2,23 @@
 anonymous=Anonymous
 footer_message=Ivan Rusenov 2024
 title_message=ORCHID
+add=Add
+description=Description
+item_number=Item Number
+price=Price:
+username=Username
+id=Id
+email=Email
+shippingAddress=Shipping Address
+role=Role
+actions=Actions
+edit=Edit
+delete=Delete
+quantity=Quantity
+price_per_unit=Price per unit
+cart=Cart
+password=Password
+confirm_password=Confirm Password
 
 #navbar
 nav_bar_company=Orchid
@@ -13,6 +30,42 @@ nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_my_orders=My orders
 nav_bar_logout=Logout
+nav_bar_users=Users
+nav_bar_orders=Orders
 
 #index
 index_heading=Online boutique for flowers and bouquets
+
+#bouquet-add
+title_add_bouquet=Add Bouquet
+add_bouquet_choose_picture=Choose picture
+
+#home
+home_btn_remove=Remove
+add_to_cart=Add to cart
+
+#users
+users_all_users=All users:
+
+#orders
+all_orders=All orders:
+order_id=Order id:
+order_details=Order Details
+order_date_and_time=Order Date and time:
+status=Status:
+total=Total:
+
+#my-orders
+my_orders=My orders:
+
+#shipping-orders
+shipping_orders=Shipping orders:
+shipping_order=Ship order
+
+#pending
+all_pending_orders=All pending orders
+
+#cart
+empty_cart=The cart is empty!
+to_gallery=To gallery
+buy=BUY
