--- a/Flowers-Shop/src/main/resources/i18n/messages.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages.properties
@@ -69,3 +69,12 @@ all_pending_orders=All pending orders
 empty_cart=The cart is empty!
 to_gallery=To gallery
 buy=BUY
+
+thanks=Thanks for your order,
+
+#edit-order
+edit_order=Edit order
+save=Save
+cancel=Cancel
+confirm=Are you sure?
+select_status=Select new status
