--- a/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
+++ b/Flowers-Shop/src/main/resources/i18n/messages_bg.properties
@@ -70,3 +70,13 @@ empty_cart=Количката е празна!
 to_gallery=Към галерия
 buy=КУПИ
 
+thanks=Благодаря за поръчката,
+
+#edit-order
+edit_order=Редакция на поръчка
+save=Запазване
+cancel=Отквърляне
+confirm=Сигурен/а ли сте?
+select_status=Избери нов статус
+
+
